# hexagonal-backend

./: README.md  cookiecutter.json
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.project_slug}}/: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
{{cookiecutter.project_slug}}/alembic/: env.py
{{cookiecutter.project_slug}}/config/: application-local.yml  application.yml
{{cookiecutter.project_slug}}/sql-utils/: utils.sql
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/main/application/ports/: item_repository_port.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/main/application/services/: item_service.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/main/boot/: app.py  config.py  containers.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/main/domain/: exceptions.py  item.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/main/driven/db/: database.py  item_repository.py  models.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/main/driving/api_rest/: health_controller.py  item_controller.py  schemas.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/tests/: conftest.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/tests/integration/: test_item_controller.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/tests/unit/: test_item_service.py
